// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:PopOver with offset: default 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
    >
      <span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Field--popOverAble __AMIS_COMPONENT_CLASS_PREFIX__Form-control"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
        >
          static
        </span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__Field-popOverBtn"
        >
          <icon-mock
            class="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover no offset 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
    >
      <span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Field--popOverAble __AMIS_COMPONENT_CLASS_PREFIX__Form-control in has-popover"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
        >
          static
        </span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__Field-popOverBtn"
        >
          <icon-mock
            class="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__PopOver __AMIS_COMPONENT_CLASS_PREFIX__PopOverAble-popover"
          data-amis-theme="cxd"
          role="popover"
          style="display: block; left: 0px; top: 0px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:PopOver with offset: show popover with offset 1`] = `
<div>
  <div
    class="__AMIS_COMPONENT_CLASS_PREFIX__Form-item __AMIS_COMPONENT_CLASS_PREFIX__Form-item--normal"
    data-amis-name="static"
    data-role="form-item"
  >
    <label
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-label"
    >
      <span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            静态展示
          </span>
        </span>
      </span>
    </label>
    <div
      class="__AMIS_COMPONENT_CLASS_PREFIX__Form-static"
    >
      <div
        class="__AMIS_COMPONENT_CLASS_PREFIX__Field--popOverAble __AMIS_COMPONENT_CLASS_PREFIX__Form-control in has-popover"
      >
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__PlainField"
        >
          static
        </span>
        <span
          class="__AMIS_COMPONENT_CLASS_PREFIX__Field-popOverBtn"
        >
          <icon-mock
            class="icon icon-zoom-in"
            icon="zoom-in"
          />
        </span>
        <div
          class="__AMIS_COMPONENT_CLASS_PREFIX__PopOver __AMIS_COMPONENT_CLASS_PREFIX__PopOverAble-popover"
          data-amis-theme="cxd"
          role="popover"
          style="display: block; left: 101px; top: 102px; visibility: hidden;"
          theme="cxd"
        >
          <div
            class="__AMIS_COMPONENT_CLASS_PREFIX__Panel __AMIS_COMPONENT_CLASS_PREFIX__Panel--default"
            data-role="container"
          >
            <div
              class="__AMIS_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <span
                class="__AMIS_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  我是提示内容
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
